# aisecretary

./: .env.example  .gitignore  README.md  pyproject.toml
.omx/: metrics.json
.omx/plans/: feature-improvement-plan.md  hermes-transaction-capability-layer-plan.md
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
prompts/: task_secretary_rules.md
scripts/: bootstrap_hermes.sh  start_local_api.sh  verify_hermes_wiring.sh
server/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  storage.py
server/tests/: test_api.py
skills/transaction_manager/: SKILL.md  tool_contract.md
